# statistics

./: .gitignore  CMakeLists.txt
include/: IStatistics.h  Statistics.h
src/: Statistics.cpp  main.cpp
